--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="centered">
-        <h1>Coming soon... (maybe)</h1>
+        <h1>Coming soon... (or not)</h1>
     </div>
 </body>
 </html>
