--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
             background: rgb(30, 49, 49);
         }
         .centered {
-            display: flex;
-            align-items: center;
-            justify-items: center;
+            display: grid;
+            place-items: center;
+            color: white;
+            font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
         }
     </style>
 </head>
