center div (wort nightmare)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         .centered {
             display: grid;
             place-items: center;
+            justify-items: center;
             color: white;
             font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
         }
