center div (worst nightmare)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .centered {
             display: grid;
             place-items: center;
-            justify-items: center;
+            align-items: center;
             color: white;
             font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
         }
