--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <style>
         body {
             background: rgb(30, 49, 49);
+            height: 100%;
+            width: 100%;
         }
         .centered {
             display: grid;
             place-items: center;
-            align-items: center;
             color: white;
             font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
         }
