--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7h3Py7h0n</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
         body {
             background: rgb(30, 49, 49);
             height: 100%;
@@ -16,7 +17,7 @@
             display: grid;
             place-items: center;
             color: white;
-            font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+            font-family: 'Mulish', sans-serif;
         }
         @keyframes toggle {
             from {
