--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7h3Py7h0n</title>
     <style>
-        /* @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap'); */
-        @import url('/mccss.css');
+        @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
+        /* @import url('/mccss.css'); */
         body {
             background: rgb(30, 49, 49);
             height: 100%;
@@ -18,8 +18,8 @@
             display: grid;
             place-items: center;
             color: white;
-            /* font-family: 'Mulish', sans-serif; */
-            font-family: 'Minecraftia Regular', sans-serif;
+            font-family: 'Mulish', sans-serif;
+            /* font-family: 'Minecraftia Regular', sans-serif; */
         }
         @keyframes toggle {
             from {
